[gd_scene load_steps=12 format=2]

[ext_resource path="res://farmingTilesheetComplete.png" type="Texture" id=1]
[ext_resource path="res://shop.gd" type="Script" id=2]
[ext_resource path="res://shopmenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://corn_seedpack.tscn" type="PackedScene" id=4]
[ext_resource path="res://berry_seedpack.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 174, 34, 29 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15, 11 )

[sub_resource type="CircleShape2D" id=6]
radius = 11.0

[node name="shop" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.98023e-08, 3 )
scale = Vector2( 1.07813, 1.04687 )
frames = SubResource( 2 )

[node name="shopart" type="AnimatedSprite" parent="."]
position = Vector2( 1, -4 )
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 10 )
shape = SubResource( 6 )

[node name="shopmenu" parent="." instance=ExtResource( 3 )]
position = Vector2( -36, -44 )

[node name="berry_seedpack" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 26, -7 )

[node name="corn_seedpack" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 25, 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
